# hysteresis

./: .travis.yml  CMakeLists.txt  TODO  main.cpp  odeset.hpp  solver.hpp  test.cpp
src/: gslerr.hpp  hdf5io.hpp  invfft.hpp  odeset.hpp  rmanip.hpp  solver.hpp  zintrp.hpp
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  hdf5.hpp  refcase.cdl
tests/dtrtol/: CMakeLists.txt  dtrtol.cpp
tests/invfft/: CMakeLists.txt  invfft.cpp
tests/nokhlr/: CMakeLists.txt  nokhlr.cpp
tests/rhloop/: CMakeLists.txt  rhloop.cdl  rhloop.cpp  rhloop_plot.cpp
tests/zintrp/: CMakeLists.txt  zintrp.cpp
